# Simple-RTOS

./: CMakeLists.txt  README.md  layout.ld  toolchain.cmake
core/: _critical_hardware.s  _lock.s  _memory.s  _start.s  _task.s  _vector_table.s  malloc.c  sched.c  task.c
debug/: close-qemu.sh  debug.sh  gdbinit
doc/: content_switch.md  cross-compilation.md  debug.md  heap.md  mutex.md  schedule.md  setup.md  tasks.md  toolchain.md
inc/: lock.h  malloc.h  sched.h  system.h  task.h  type.h
init/: _start.s  _vector_table.s  main.c
kernel/: CMakeLists.txt
kernel/inc/: assert.h  block.h  buffer.h  heap.h  list.h  lock.h  malloc.h  page.h  queue.h  schedule.h  system.h  task.h  timer.h
kernel/src/: _lock.s  _memory.s  _pendsv.s  _schedule.s  _system_call.s  _systick.s  block.c  buffer.c  daemon.c  heap.c  init.c  list.c  malloc.c  page.c  queue.c  schedule.c  task.c  timer.c
user/: task1.c  task2.c  task3.c
